@@ -56,27 +56,27 @@ public class PolarDiagramCSV extends PolarDiagramBase {
             switch (elements[0]) {
             case "windspeed":
                 for (int i = 1; i < elements.length; i++) {
-                    windSpeeds.add(new KnotSpeedImpl(new Double(elements[i])));
+                    windSpeeds.add(new KnotSpeedImpl(Double.valueOf(elements[i])));
                 }
                 break;
             case "beatangles":
                 for (int i = 1; i < elements.length; i++) {
-                    beatAngles.add(new DegreeBearingImpl(new Double(elements[i])));
+                    beatAngles.add(new DegreeBearingImpl(Double.valueOf(elements[i])));
                 }
                 break;
             case "beatsog":
                 for (int i = 1; i < elements.length; i++) {
-                    beatSpeed.add(new KnotSpeedImpl(new Double(elements[i])));
+                    beatSpeed.add(new KnotSpeedImpl(Double.valueOf(elements[i])));
                 }
                 break;
             case "jibesog":
                 for (int i = 1; i < elements.length; i++) {
-                    jibeSpeed.add(new KnotSpeedImpl(new Double(elements[i])));
+                    jibeSpeed.add(new KnotSpeedImpl(Double.valueOf(elements[i])));
                 }
                 break;
             case "jibeangles":
                 for (int i = 1; i < elements.length; i++) {
-                    jibeAngles.add(new DegreeBearingImpl(new Double(elements[i])));
+                    jibeAngles.add(new DegreeBearingImpl(Double.valueOf(elements[i])));
                 }
                 break;
             default:
@@ -84,12 +84,12 @@ public class PolarDiagramCSV extends PolarDiagramBase {
 
                 for (int i = 1; i < elements.length; i++) {
                     if (elements[i].length() > 0) {
-                        sp.add(new KnotSpeedImpl(new Double(elements[i])));
+                        sp.add(new KnotSpeedImpl(Double.valueOf(elements[i])));
                     } else {
                         sp.add(Speed.NULL);
                     }
                 }
-                speeds.put(new DegreeBearingImpl(new Double(elements[0])), sp);
+                speeds.put(new DegreeBearingImpl(Double.valueOf(elements[0])), sp);
                 break;
 
             }
